[package]
name = "yank-next"
description = "A command line tool to copy and paste files in a desktop-like fashion."
license = "MIT"
repository = "https://github.com/stickynotememo/yank"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
preferences = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
